...
              </SettingsList.ItemText>
              <Toggle.Platform />
            </SettingsList.Item>
          </Toggle.Item>
          <Toggle.Item
            name="oops_all_text"
            label={_(msg`Oops! All text`)}
            value={altTextFirstPref ?? false}
            onChange={value => setAltTextFirstPref(value)}>
            <SettingsList.Item>
              <SettingsList.ItemIcon icon={ImageIcon} />
              <SettingsList.ItemText>
                <Trans>Oops! All text</Trans>
...
